@@ -1,7 +1,6 @@
 package com.cakk.api.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
@@ -12,14 +11,14 @@ import com.cakk.domain.mysql.entity.shop.CakeShopOperation;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class ShopOperationMapper {
 
-	public static List<CakeShopOperation> supplyCakeShopOperationListBy(List<ShopOperationParam> operationDays) {
+	public static List<CakeShopOperation> supplyCakeShopOperationListBy(final List<ShopOperationParam> operationDays) {
 		return operationDays
 			.stream()
 			.map(ShopOperationMapper::supplyCakeShopOperationBy)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
-	public static CakeShopOperation supplyCakeShopOperationBy(ShopOperationParam param) {
+	public static CakeShopOperation supplyCakeShopOperationBy(final ShopOperationParam param) {
 		return CakeShopOperation.builder()
 			.operationDay(param.operationDay())
 			.operationStartTime(param.operationStartTime())
